# Transformer_in_C-

./: .gitignore  CMakeLists.txt  README.md  attention.cpp  attention.h  dataset.jsonl  decoder.cpp  decoder.h  encoder.cpp  encoder.h  export_weights.py  ffn.cpp  ffn.h  input_layer.cpp  input_layer.h  layer_norm.cpp  layer_norm.h  main.cpp  main.h  main.py  token_embedding.cpp  token_embedding.h  tokenizer.cpp  tokenizer.h  train.py  utils.cpp  utils.h
